--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,7 +4,76 @@
 body {
   background-color: #f5f7f9;
 }
+// font-size
+$f11: 11px;
+$f12: 12px;
+$f13: 13px;
+$f14: 14px;
+$f15: 15px;
+$f16: 16px;
+$f17: 17px;
+$f18: 18px;
+$f19: 19px;
+$f20: 20px;
+$f21: 21px;
+$f22: 22px;
+$f23: 23px;
+$f24: 24px;
+$f25: 25px;
+$f26: 26px;
+$f27: 27px;
+$f28: 28px;
 
+.f11 {
+  font-size: $f11;
+}
+.f15 {
+  font-size: $f15;
+}
+.f16 {
+  font-size: $f16;
+}
+.f17 {
+  font-size: $f17;
+}
+.f18 {
+  font-size: $f18;
+}
+.f19 {
+  font-size: $f19;
+}
+.f20 {
+  font-size: $f20;
+}
+.f21 {
+  font-size: $f21;
+}
+.f22 {
+  font-size: $f22;
+}
+.f23 {
+  font-size: $f23;
+}
+.f24 {
+  font-size: $f24;
+}
+.f25 {
+  font-size: $f25;
+}
+.f26 {
+  font-size: $f26;
+}
+.f27 {
+  font-size: $f27;
+}
+.f28 {
+  font-size: $f28;
+}
+
+// padding-left
+.pl5 {
+  padding-left: 5px;
+}
 // header
 
 .header {
