home页面的channels模块完成（包括未登录和已登录的channels新增和删除）

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,7 @@
 // 全局样式
 
 @import 'https://at.alicdn.com/t/c/font_4175115_n7xb9z0lcbi.css?spm=a313x.7781069.1998910419.83&file=font_4175115_n7xb9z0lcbi.css';
+
 body {
   background-color: #f5f7f9;
 }
@@ -85,5 +86,19 @@ $f28: 28px;
     .van-nav-bar__title {
       color: #fff;
     }
+  }
+}
+body {
+  height: 100%;
+}
+// popup
+.popPup {
+  height: 100%;
+  .editChannel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
   }
 }
